@@ -11,7 +11,7 @@ class TestSocket_TCPSocket < Test::Unit::TestCase
   def test_initialize_failure
     # These addresses are chosen from TEST-NET-1, TEST-NET-2, and TEST-NET-3.
     # [RFC 5737]
-    # They are choosen because probably they are not used as a host address.
+    # They are chosen because probably they are not used as a host address.
     # Anyway the addresses are used for bind() and should be failed.
     # So no packets should be generated.
     test_ip_addresses = [
